enum EstadoFoco{
    Encendido,
    Apagado
};