@startuml diagrama

class Serie{
    - Foco : foquitos[10]
    + EncenderCantidad(Numero)
    + EncenderTodo()
    + ApagarTodo()
    + ApagarCantidad(Numero)
    + RecorrerDerecha()
    + RecorrerIzquierda()
    + AlternarEncendido()
    + Imprimir()
    }

class Foco{
    - EstadoFoco : estado
    + Encender() 
    + Apagar() 
    + Imprimir()
    + Alternar()
}

enum EstadoFoco{
    Encendido
    Apagado
    }

class Usuario

Foco *-- EstadoFoco
Foco --o Usuario 
Serie "1" *-- "10" Foco
Usuario o-- Serie 

@enduml